# discovery

./: .dockerignore  .env.example  .gitignore  API_DOCUMENTATION.md  API_KEY_AUTH_IMPLEMENTATION.md  COMMAND_PARAMETER_FIX.md  DARK_MODE_FEATURE.md  DEPENDENCY_RESOLUTION.md  DEPLOYMENT_GUIDE.md  DOCKER.md  Dockerfile  FASTAPI_IMPLEMENTATION.md  FILE_IMPORT_FIX.md  FIREBASE_CLI_AUTH_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_IMPLEMENTATION.md  INTEGRATION_TEST_README.md  LICENSE.md  MIGRATIONS_GUIDE.md  OAUTH_STATE_MISMATCH_FIX.md  QUICK_REFERENCE_DARK_MODE.md  QUICK_START.md  README.md  README_API.md  THEME_CHANGES.md  TODO.md  URL_IMPORT_FIX.md  URL_IMPORT_FIX_2.md  UV_MIGRATION.md  addSourcesToNotebook.md  alembic.ini  buildNotebookFromSearch.md  docker-compose.weaviate.yml  docker-compose.yml  foo.py  integration_test.ipynb  markmap.html  oauth_local.md  openapi.json  pyproject.toml  (+8 more)
discoveryPortal/: .firebaserc  CLEAN_ARCHITECTURE.md  DEPLOYMENT.md  PROXY_SETUP.md  QUICK_REFERENCE.md  README.md  angular.json  firebase.json  package-lock.json  package.json  proxy.conf.json
discoveryPortal/prompts/: cleanArchitecture.md  promptLog.md
discoveryPortal/src/: index.html  styles.scss
discoveryPortalReact/: .env.example  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
discoveryPortalReact/src/: App.tsx  main.tsx
docs/: ADD_SOURCES_BY_SEARCH_FEATURE.md  API_CONFIGURATION.md  CLI_AUTH_MIGRATION.md  CLI_AUTH_MIGRATION_SUMMARY.md  CLI_AUTH_QUICKREF.md  CLI_FIREBASE_AUTH.md  CLI_FIREBASE_AUTH_IMPLEMENTATION.md  DARK_MODE_GUIDE.md  DEPLOYMENT_GUIDE.md  DUCKDUCKGO_IMPLEMENTATION_SUMMARY.md  DUCKDUCKGO_QUICK_START.md  DUCKDUCKGO_SEARCH_IMPLEMENTATION.md  EMAIL_PASSWORD_AUTH.md  FIREBASE_AUTH_SETUP.md  FIREBASE_IMPLEMENTATION.md  FIREBASE_IMPLEMENTATION_SUMMARY.md  FIREBASE_SERVICE_ACCOUNT_JSON.md  VECTOR_DATABASE_CONFIGURATION.md
pgDockerCompose/: docker-compose.yaml
prompts/: 001-CRUDForNotebook.md  002-useUv  003-ImplementPostgresInfra  004-DomainServicesForNotebook copy.md  005-DomainServicesForSources.md  006-DoInfra.md  007-DoFastApi.md  008-AmendUrlImport.md  009-AmendFileImport copy.md  009-AmendFileImport.md  010-AmendFileImport2.md  011-fixError.md  012-makeIntegrationTestPlanForApis.md  013-writeApiIntegrationTests.md  014-updateReadme.md  015-ingestNotebookIntoWeaviate.md  015-vector.md  016-writeTestProgramForIngestion  017-makeNewNotebook.md  018-useWeaviateCloud.md  019-bug-useCorrectEmbedding.md  020-createNewTestScript.md  021-regressionTest.md  021-testNotebookCreation.md  022-testNotebookListScreen.md  023-testAddingSourceToNotebook.md  024-createCollectionForNotebook.md  025-addApiToFindBlogPosts.md  026-writeHtmlJsUx.md  027-addUrlSourcesUsingSearchPhrase.md  028-qa-rag-for-notebook.md  029-fixRenameOfSource  030-randomBugs  031-docs  032-blogPostFeature.md  033-enableMeToMakeANewSourceWithText  034-addVectorDbProviderForChromaDb  035-designCli copy.md  035-designCli.md  036-cliSetCurrentNotebook.md  (+12 more)
scripts/: README.md  build_frontend.sh  dev.sh  ingest_wikipedia_notebook.py  setup.sh  test.sh  update_created_by.sql
specs/: core_stories.md  domain_model.md
src/api/: article_search_router.py  auth_router.py  dtos.py  main.py  mindmap_router.py  notebooks_router.py  outputs_router.py  qa_router.py  sources_router.py  vector_search_router.py
src/apps/: ingest_notebook_into_vectordb.py  ingest_notebook_into_vectordb2.py
src/cli/: README.md  README.md.backup  __init__.py  __main__.py  config_store.py  exceptions.py  firebase_client.py  firebase_email_auth.py  http_client.py  output.py  runtime.py  utils.py
tests/cli/: test_firebase_auth.py  test_firebase_email_auth.py
tests/integration/: conftest.py  test_api_endpoints.py  test_api_endpoints2.py  test_api_regression.py  test_auth_api.py  test_newspaper_provider.py  test_sources_api.py
tests/unit/: test_auth_service.py  test_cli_config_store.py  test_cli_runtime.py  test_content_similarity_service.py  (+9 more)
(+239 files in other folders)
