[project]
name = "discovery"
version = "0.1.0"
description = "A local NotebookLM-like research application following Clean Architecture"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.109.0",
    "uvicorn[standard]==0.27.0",
    "pydantic==2.8.0",
    "httpx[http2]==0.27.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "psycopg2-binary==2.9.11",
    "alembic>=1.13.0",
    "beautifulsoup4>=4.12.0",
    "PyPDF2>=3.0.0",
    "python-docx>=1.1.0",
    "weaviate-client>=4.16.10",
    "chromadb==1.0.15",
    "python-dotenv>=1.2.1",
    "google-genai",
    "typer>=0.12.3,<0.13",
    "click>=8.1.7,<8.2",
    "rich>=13.7.0",
    "PyYAML>=6.0.1",
    "tomli-w>=1.0.0",
    "newspaper3k>=0.2.8",
    "lxml_html_clean>=0.1.0",
    "firebase-admin>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.4",
    "pytest-asyncio==0.23.3",
    "pytest-cov==4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

    [project.scripts]
    discovery = "src.cli.__main__:cli"
